# ChangeLog for dev-perl/Test-Distribution
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Distribution/ChangeLog,v 1.4 2011/07/19 19:51:14 maekke Exp $

  19 Jul 2011; Markus Meier <maekke@gentoo.org> Test-Distribution-2.00.ebuild:
  amd64/x86 stable, bug #374479

  16 Jul 2009; Torsten Veller <tove@gentoo.org>
  Test-Distribution-2.00.ebuild:
  Depend on Module-Build. Run tests

  23 Jun 2009; Torsten Veller <tove@gentoo.org>
  Test-Distribution-2.00.ebuild:
  New virtual: dev-perl/Module-CoreList to virtual

*Test-Distribution-2.00 (23 Jun 2009)

  23 Jun 2009; Robin H. Johnson <robbat2@gentoo.org>
  +Test-Distribution-2.00.ebuild, +metadata.xml:
  Initial commit. Ebuild by Robin H. Johnson <robbat2@gentoo.org>.
